--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="/img/logo.jpeg" alt=""></a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+			<a class="navbar-brand" href="#"><img src="./img/logotaxigosinfondo.png" alt=""></a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<!-- ms-autosignifica "margin-start:auto" y se utiliza para alinear un elemento a la derecha del contenedor principal.-->
 
@@ -204,7 +204,7 @@
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="card text-center">
 						<div class="card-body">
-							<img alt="" class="img-fluid rounded-circle" src="https://media.licdn.com/dms/image/C5603AQGWzqryiY8B2Q/profile-displayphoto-shrink_800_800/0/1539707298078?e=2147483647&v=beta&t=k1xwpd6g4Ir1jtGQROpmHMuaiOZHRJP79cfrdOks9xI">
+							<img alt="" class="img-fluid rounded-circle" src="./img/camilafoto2.png">
 							<h3 class="card-title py-2">Camila Peña</h3>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
@@ -213,8 +213,8 @@
 				</div>
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="card text-center">
-						<div class="card-body">
-							<img alt="" class="img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/77415169?v=4">
+						<div class="card-body-hector">
+							<img alt="" class="img-fluid rounded-circle" src="./img/hectorfoto2.png">
 							<h3 class="card-title py-2">Héctor Beltrán</h3>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
@@ -224,7 +224,7 @@
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="card text-center">
 						<div class="card-body">
-							<img alt="" class="img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/111825505?v=4">
+							<img alt="" class="img-fluid rounded-circle" src="./img/adrianafoto2.png">
 							<h3 class="card-title py-2">Adriana Moreno</h3>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
@@ -234,7 +234,7 @@
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="card text-center">
 						<div class="card-body">
-							<img alt="" class="img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/108376706?v=4">
+							<img alt="" class="img-fluid rounded-circle" src="./img/andrefoto2.png">
 							<h3 class="card-title py-2">Andrea Ruiz</h3>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
@@ -265,7 +265,7 @@
 	<!-- footer starts -->
 	<footer class="bg-dark p-2 text-center">
 		<div class="container">
-			<p class="text-white">Todos los derechos reservados By @website Camila - Héctor - Adriana - Andrea</p>
+			<p class="text-white">Todos los derechos reservados by TaxiGo Camila &bull; Héctor &bull; Adriana &bull; Andrea</p>
 		</div>
 	</footer>
 	<!-- footer ends -->
