--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TaxiGo</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="estilos.css" rel="stylesheet">
+	<link rel="shortcut icon" href="img/iconopestaña.png" />
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="/img/logo.jpeg" alt=""></a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+			<a class="navbar-brand" href="#"><img class="logo"src="img/logo.jpeg" alt="logo"></a> 
+			 <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<!-- ms-autosignifica "margin-start:auto" y se utiliza para alinear un elemento a la derecha del contenedor principal.-->
 
@@ -68,7 +71,7 @@
 				<div class="carousel-caption">
 					<h5>Descubre</h5>
 					<p>Llega a los mejores lugares de la ciudad, pregunta por nuestro City Tour</p>
-					<p><a class="btn btn-warning mt-3" href="#">Learn More</a></p>
+					<p><a class="btn btn-warning mt-3" href="#">Solictar</a></p>
 				</div>
 			</div>
 		</div><button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleIndicators" type="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="visually-hidden">Previous</span></button> <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleIndicators" type="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="visually-hidden">Next</span></button>
@@ -82,7 +85,7 @@
 
 				<!--"col-12" significa que en pantallas pequeñas (menos de 768 píxeles), la columna ocupará las doce columnas totales disponibles en un contenedor.-->
 				<div class="col-lg-4 col-md-12 col-12">
-					<div class="about-img"><img alt="" class="img-fluid" src="img/photo-1534665482403-a909d0d97c67.jpeg"></div>
+					<div class="about-img"><img alt="" class="img-fluid" src="img/taxiguy.webp"></div>
 				</div>
 
 				<!--"col-lg-8": Indica que el elemento debe ocupar 8 de las 12 columnas disponibles en la rejilla de Bootstrap en dispositivos grandes (pantallas con un ancho de al menos 992 píxeles).-->
@@ -98,7 +101,8 @@
 					<div class="about-text">
 						<h2>Trabajamos por ti<br>
 						24/7</h2>
-						<p>TaxiGo tu nuevo aliado de confianza en transporte en Bogotá. Brindamos un servicio de taxis confiable, seguro y eficiente, con conductores capacitados y amigables. Tu satisfacción es nuestra prioridad. ¡Viaja con TaxiGo y disfruta de trayectos sin complicaciones en la ciudad!</p><a class="btn btn-warning" href="#">Learn More</a>
+						<p>TaxiGo tu nuevo aliado de confianza en transporte en Bogotá. Brindamos un servicio de taxis confiable, seguro y eficiente, con conductores capacitados y amigables. Tu satisfacción es nuestra prioridad. ¡Viaja con TaxiGo y disfruta de trayectos sin complicaciones en la ciudad!</p>
+						<a class="btn btn-warning" href="#services">Conoce más</a>
 					</div>
 				</div>
 			</div>
@@ -121,7 +125,7 @@
 						<div class="card-body">
 							<i class="bi bi-laptop"></i>
 							<h3 class="card-title">Servicio de taxi confiable</h3>
-							<p class="lead">Con TaxiGo, disfruta de un servicio de taxi confiable las 24 horas. Nuestros conductores expertos te garantizan un viaje seguro y rápido, brindándote comodidad y tranquilidad en cada trayecto.</p><button class="btn bg-warning text-dark">Solicitar taxi</button>
+							<p class="lead">Con TaxiGo, disfruta de un servicio de taxi confiable las 24 horas. Nuestros conductores expertos te garantizan un viaje seguro y rápido, brindándote comodidad, tranquilidad en cada trayecto, sin importar a donde vayas .</p><button class="btn bg-warning text-dark">Solicitar taxi</button>
 						</div>
 					</div>
 				</div>
@@ -161,27 +165,27 @@
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-light text-center bg-white pb-2">
 						<div class="card-body text-dark">
-							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/tipotaxieco.jpg"/></div>
+							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/taxitipo1.jpg"/></div>
 							<h3 class="card-title">Taxi Eco</h3>
-							<p class="lead">Taxi para 4 personas, tarifa economica desde $5.000</p><button class="btn bg-warning text-dark">Learn More</button>
+							<p class="lead">Taxi para 4 personas, tarifa economica desde $5.000</p><button class="btn bg-warning text-dark">Reservar</button>
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-light text-center bg-white pb-2">
 						<div class="card-body text-dark">
-							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/tipotaxipro.jpg"></div>
+							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/taxitipo2.jpg"></div>
 							<h3 class="card-title">Taxi Pro</h3>
-							<p class="lead">Taxi privado de 2 a 4 personas, tarifa pro desde $10.000 </p><button class="btn bg-warning text-dark">learn More</button>
+							<p class="lead">Taxi privado capacidad de 2 a 4 personas, tarifa pro desde $10.000 </p><button class="btn bg-warning text-dark">Reservar</button>
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-light text-center bg-white pb-2">
 						<div class="card-body text-dark">
-							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/tipotaxisuperpro.jpg"></div>
+							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/taxitipo3.jpg"></div>
 							<h3 class="card-title">Taxi Super Pro</h3>
-							<p class="lead">Puedes ir solo en tu propio taxi y maximo 6 personas, es tu eleccion, tarifa super pro desde $15.000</p><button class="btn bg-warning text-dark">Learn More</button>
+							<p class="lead">Capacidad para 6 personas, tarifa super pro desde $15.000</p><button class="btn bg-warning text-dark">Reservar</button>
 						</div>
 					</div>
 				</div>
@@ -204,7 +208,7 @@
 					<div class="card text-center">
 						<div class="card-body">
 							<img alt="" class="img-fluid rounded-circle" src="https://media.licdn.com/dms/image/C5603AQGWzqryiY8B2Q/profile-displayphoto-shrink_800_800/0/1539707298078?e=2147483647&v=beta&t=k1xwpd6g4Ir1jtGQROpmHMuaiOZHRJP79cfrdOks9xI">
-							<h3 class="card-title py-2">Camila Peña</h3>
+							<h4 class="card-title py-2">Camila Peña</h4>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
 						</div>
@@ -214,7 +218,7 @@
 					<div class="card text-center">
 						<div class="card-body">
 							<img alt="" class="img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/77415169?v=4">
-							<h3 class="card-title py-2">Héctor Beltrán</h3>
+							<h4 class="card-title py-2">Héctor Beltrán</h4>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
 						</div>
@@ -224,7 +228,7 @@
 					<div class="card text-center">
 						<div class="card-body">
 							<img alt="" class="img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/111825505?v=4">
-							<h3 class="card-title py-2">Adriana Moreno</h3>
+							<h4 class="card-title py-2">Adriana Moreno</h4>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
 						</div>
@@ -234,7 +238,7 @@
 					<div class="card text-center">
 						<div class="card-body">
 							<img alt="" class="img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/108376706?v=4">
-							<h3 class="card-title py-2">Andrea Ruiz</h3>
+							<h4 class="card-title py-2">Andrea Ruiz</h4>
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
 						</div>
@@ -264,10 +268,12 @@
 	<!-- footer starts -->
 	<footer class="bg-dark p-2 text-center">
 		<div class="container">
-			<p class="text-white">Todos los derechos reservados By @website Camila - Héctor - Adriana - Andrea</p>
+			<p class="text-white">Todos los derechos reservados &copy; CodeHunters</p>
 		</div>
 	</footer>
 	<!-- footer ends -->
 	<script src=scripts.js></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js">
+	</script>
 </body>
 </html>
