--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
 
-			
-			<a class="navbar-brand" href="#"><img src="./img/logotaxigosinfondo.png" alt=""></a> 
+			<a href="#"><img class="logo" src="./img/logotaxigosinfondo.png" alt="logo"></a> 
       <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -103,8 +102,7 @@
 				<!--"mt-md-5": Agrega un margen superior (margin) de 5 espacios en dispositivos medianos (pantallas con un ancho de al menos 768 píxeles).-->
 				<div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
 					<div class="about-text">
-						<h2>Trabajamos por ti<br>
-						24/7</h2>
+						<h2>Trabajamos por ti 24/7</h2>
 						<p>TaxiGo tu nuevo aliado de confianza en transporte en Bogotá. Brindamos un servicio de taxis confiable, seguro y eficiente, con conductores capacitados y amigables. Tu satisfacción es nuestra prioridad. ¡Viaja con TaxiGo y disfruta de trayectos sin complicaciones en la ciudad!</p>
 						<a class="btn btn-warning" href="#services">Conoce más</a>
 					</div>
@@ -168,7 +166,7 @@
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-light text-center bg-white pb-2">
-						<div class="card-body text-dark">
+						<div class="card-body text-dark card-taxi">
 							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/taxitipo1.jpg"/></div>
 							<h3 class="card-title">Taxi Eco</h3>
 							<p class="lead">Taxi para 4 personas, tarifa economica desde $5.000</p><button class="btn bg-warning text-dark">Reservar</button>
@@ -177,7 +175,7 @@
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-light text-center bg-white pb-2">
-						<div class="card-body text-dark">
+						<div class="card-body text-dark card-taxi">
 							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/taxitipo2.jpg"></div>
 							<h3 class="card-title">Taxi Pro</h3>
 							<p class="lead">Taxi privado capacidad de 2 a 4 personas, tarifa pro desde $10.000 </p><button class="btn bg-warning text-dark">Reservar</button>
@@ -186,7 +184,7 @@
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-light text-center bg-white pb-2">
-						<div class="card-body text-dark">
+						<div class="card-body text-dark card-taxi">
 							<div class="img-area mb-4"><img alt="" class="img-fluid" src="img/taxitipo3.jpg"></div>
 							<h3 class="card-title">Taxi Super Pro</h3>
 							<p class="lead">Capacidad para 6 personas, tarifa super pro desde $15.000</p><button class="btn bg-warning text-dark">Reservar</button>
@@ -237,7 +235,7 @@
 						<div class="card-body">
 
 							<img alt="" class="img-fluid rounded-circle" src="./img/adrianafoto2.png">
-							<h3 class="card-title py-2">Adriana Moreno</h3>
+							<h4 class="card-title py-2">Adriana Moreno</h4>
 
 							<p class="card-text">Developer FullStack Java Junior</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
@@ -293,7 +291,7 @@
 				   <i class="material-icons icon-font-color">close</i>
 				 </button> 
 			   
-				<p><img src="/img/logo-whatsapp-guardian.webp" width="70">Comunicate con un asesor</p>
+				<p><img src="/img/logo-whatsapp-guardian.webp" width="70" alt="whatsapp">Comunicate con un asesor</p>
 				
 			 </div>
 			 <div class="content-whatsapp -bottom">
@@ -309,12 +307,16 @@
 			 </div>
 		 </div>
 		 <button type="button" id="whats-openPopup" class="whatsapp-button">
-			 <div class="float" >
-<i class="fa fa-whatsapp my-float"></i></div>
+			Boton
+			 <div class="float">
+			 <i class="fa fa-whatsapp my-float"></i>
+			</div>
 		 </button>
 		 <div class="circle-anime"></div>
 	 </div>
-	 <script src="/js/scripts.js"></script>   
+	 <script src="/js/scripts.js"></script> 
+	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js">
+	</script> 
 
 </body>
 </html>
