--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="carousel-item active">
 				<img alt="..." class="d-block w-100" src="img/taxi2.jpeg">
 				<div class="carousel-caption">
-					<h5>Viaja segur@, viaja tranquila@</h5>
+					<h5>Viaja segur@, viaja tranquil@</h5>
 					<p>Comprendemos el verdadero valor de un viaje, queremos lo mejor para ti, por eso garantizamos tu seguridad.</p>
 					<!---->
 					<p><a class="btn btn-warning mt-3" href="#">Solicitar</a></p>
